--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,43 +12,37 @@
     <title>InDecks</title>
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><img src="/images/full-name-logo.png" alt="InDecks logo" width="44.22" height="30.03"></a>
+    <nav class="navbar static-top navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/"><img src="/images/full-name-logo.png" alt="InDecks logo" width="44.22" height="30.03"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <a href="/signup"><button type="button" class="btn btn-outline-light btn-md">Sign up</button></a>
-      </div>
+      <% if logged_in? %>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="/decks" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Decks
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+              </div>
+            </li>
+          </ul>
+          <a href="/signup"><button type="button" class="btn btn-outline-light btn-md">Sign out</button></a>
+        </div>
+        <% else %>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <a href="/signup"><button type="button" class="btn btn-outline-light btn-md">Sign up</button></a>
+        </div>
+        <% end %>
     </nav>
 
     <div>
         <%= yield %>
     </div>
-    <footer class="footer mt-auto footer">
+    <footer class="footer mt-auto">
       <div class="container">
         <span class="text-light">&copy; InDecks</span>
       </div>
