--- a/app/views/users/signin.erb
+++ b/app/views/users/signin.erb
@@ -1,22 +1,20 @@
-<div class="container min-vh-100">
-    <div class="row min-vh-100 justify-content-center" style="margin-top: 200px;">
+<div class="container min-vh-100" style="padding-top: 40px;">
+    <div class="row min-vh-100 justify-content-center align-items-center">
         <div class="card " style="width: 30rem;">
             <div class="card-header text-light">
-                Log in
+                <h5>Sign in</h5>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Log in</h5>
                     <form method="POST" action="/signin">
                     <div class="form-group">
                         <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password">
+                        <input type="password" class="form-control" name="password" id="password">
                     </div>
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn btn-primary">Sign in</button>
                     </form>
             </div>
         </div>
