--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -8,17 +8,16 @@
                     <form method="POST" action="/signup">
                     <div class="form-group">
                         <label for="first-name">First name</label>
-                        <input type="text" class="form-control" id="first-name" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-muted">Or whatever you want us to call you.</small>
+                        <input type="text" class="form-control" name="first_name" id="first-name">
                     </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password">
+                        <input type="password" class="form-control" name="password" id="password">
                     </div>
                     <button type="submit" class="btn btn-primary">Sign up</button>
                     </form>
