--- a/app/views/decks/decks.erb
+++ b/app/views/decks/decks.erb
@@ -1,3 +1,3 @@
 <div class="container min-vh-100" style="padding-top: 40px;">
-    <h1>Test</h1>
+    <h1>Welcome, <%= current_user.first_name %>!</h1>
 </div>
