--- a/app/views/users/signin.erb
+++ b/app/views/users/signin.erb
@@ -1,6 +1,6 @@
-<div class="container min-vh-100" style="padding-top: 40px;">
+<div class="container">
     <div class="row min-vh-100 justify-content-center align-items-center">
-        <div class="card " style="width: 30rem;">
+        <div class="card" style="width: 30rem;">
             <div class="card-header text-light">
                 <h5>Sign in</h5>
             </div>
