--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,4 +1,4 @@
-<div class="container min-vh-100" style="padding-top: 40px;">
+<div class="container">
     <div class="row min-vh-100 justify-content-center align-items-center">
         <div class="card " style="width: 30rem;">
         <div class="card-header text-light">
