--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -30,7 +30,7 @@
               </div>
             </li>
           </ul>
-          <a href="/signup"><button type="button" class="btn btn-outline-light btn-md">Sign out</button></a>
+          <a href="/signout"><button type="button" class="btn btn-outline-light btn-md">Sign out</button></a>
         </div>
         <% else %>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -39,9 +39,19 @@
         <% end %>
     </nav>
 
-    <div>
+      <% flash.keys.each do |type| %>
+        <div class="alert alert-<%= type %> alert-dismissible fade show" role="alert">
+          <strong><%= flash[type] %></strong>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% end %>
+
+
         <%= yield %>
-    </div>
+
+
     <footer class="footer mt-auto">
       <div class="container">
         <span class="text-light">&copy; InDecks</span>
