--- a/app/views/decks/decks.erb
+++ b/app/views/decks/decks.erb
@@ -6,7 +6,7 @@
         <h2 style="padding-top: 1rem;">No Decks :(</h2>
     <% else %>
         <% @decks.each do |deck| %>
-            <div class="accordion" id="accordionExample" style="padding-top: 1rem;">
+            <div class="accordion" id="deckAccordian" style="padding-top: 1rem;">
                 <div class="card">
                     <div class="card-header" id="heading">
                     <h2 class="mb-0">
@@ -16,9 +16,9 @@
                     </h2>
                     </div>
 
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div id="collapse" class="collapse show" aria-labelledby="heading" data-parent="#deckAccordian">
+                    <div class="card-body list-group">
+                        <a href="#" class="list-group-item list-group-item-action"><%= deck.cards.name %></a>
                     </div>
                     </div>
                 </div>
