--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -3,7 +3,7 @@
     <div class="carousel-item active">
       <img src="/images/index_cards.jpg" class="d-block w-100 h-75" alt="Index Cards">
       <div class="black-overlay"></div>
-      <div class="carousel-caption carousel-cap-padding">
+      <div class="carousel-caption">
         <h1 class="display-2">InDecks</h1>
         <h3 class="caption-description">Digital index cards to organize your life.</h3>
         <a href="/signup"><button type="button" class="btn btn-outline-light btn-lg landing-page-btn">Sign up</button></a>
@@ -11,5 +11,4 @@
       </div>
     </div>
   </div>
-  </a>
 </div>
