--- a/app/views/decks/decks.erb
+++ b/app/views/decks/decks.erb
@@ -6,24 +6,18 @@
         <h2 style="padding-top: 1rem;">No Decks :(</h2>
     <% else %>
         <% @decks.each do |deck| %>
-            <div class="accordion" id="deckAccordian" style="padding-top: 1rem;">
-                <div class="card">
-                    <div class="card-header" id="heading">
-                    <h2 class="mb-0">
-                        <button class="btn btn-link btn-block text-left btn-lg" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        <%= deck.name %>
-                        </button>
-                    </h2>
-                    </div>
-
-                    <div id="collapse" class="collapse show" aria-labelledby="heading" data-parent="#deckAccordian">
-                    <div class="card-body list-group">
-                        <a href="#" class="list-group-item list-group-item-action"><%= deck.cards.name %></a>
+            <div class="row" style="padding-top: 1rem;">
+                <div class="col-xl-12">
+                    <div class="card text-light">
+                        <div class="card-header display-4"><%= deck.name %></div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <a href="/decks/<%= deck.slug %>" class="btn btn-outline-dark btn-lg">View Deck</a>
+                        <a href="/decks/<%= deck.slug %>/edit" class="btn btn-outline-dark btn-lg">Edit Deck</a>
                     </div>
                     </div>
                 </div>
             </div>
         <% end %>
     <% end %>
-
 </div>
