--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,8 +18,14 @@
   div.card-header {
     background: #343a40;
   }
-
-  .carousel .item img {
-    max-height: 768px;
-    min-width: auto;
-  }
+  .carousel-caption {
+    position: absolute;
+    right: 15%;
+    bottom: 40%;
+    left: 15%;
+    z-index: 10;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    text-align: center;
+}
