updated application_controller to fix @user control flow for signed in/signed out nav bar. Added Add a Card button to decks and added tags/last note to Deck Card view

--- a/app/views/decks/decks.erb
+++ b/app/views/decks/decks.erb
@@ -12,6 +12,7 @@
                         <div class="card-header display-4"><%= deck.name %></div>
                     <div class="card-body">
                         <p class="card-text"></p>
+                        <a href="/decks/<%= deck.slug %>/cards/new" class="btn btn-outline-dark btn-lg btn-block">Add a Card</a>
                         <a href="/decks/<%= deck.slug %>" class="btn btn-outline-dark btn-lg btn-block">View Deck</a>
                         <a href="/decks/<%= deck.slug %>/edit" class="btn btn-outline-dark btn-lg btn-block">Edit Deck</a>
                     </div>
