--- a/app/views/decks/show.erb
+++ b/app/views/decks/show.erb
@@ -1,16 +1,26 @@
 <div class="container min-vh-100" style="padding-top: 40px;">
     
         <div class="card mb-3" style="max-width: 85rem;">
-            <div class="card-header text-light"><h2><%= @deck.name %></h2></div>
+            <div class="card-header text-light text-center display-4"><%= @deck.name %></div>
             <div class="card-body">
             <a href="/decks/<%= @deck.slug %>/cards/new"><button type="button" class="btn btn-dark btn-lg">Create a Card</button></a>
             <% if @cards.nil? %>
                 <h4 class="card-title" style="padding-top: 1rem;">Please create a card.</h4>
             <% else %>
                 <% @cards.each do |card| %>
-                <div class="card-body list-group">
-                    <a href="#" class="list-group-item list-group-item-action"><%= card.name %></a>
+                <div class="row" style="padding-top: 1rem;">
+                <div class="col-xl-12">
+                    <div class="card text-light text-center">
+                        <div class="card-header display-4"><%= card.name %></div>
+                    <div class="card-body">
+                        <p class="card-text"><%= card.tags %></p>
+                        <p class="card-text"><%= Note.where(card_id: card.id).last %></p>
+                        <a href="/decks/<%= @deck.slug %>/cards/<%= card.slug %>" class="btn btn-outline-dark btn-lg btn-block">View Card</a>
+                        <a href="/decks/<%= @deck.slug %>/cards/<%= card.slug %>/edit" class="btn btn-outline-dark btn-lg btn-block">Edit Card</a>
+                    </div>
+                    </div>
                 </div>
+            </div>
                 <% end %>
             <% end %>
             </div>
