updated application, decks, and users controllers to make more dry and remove unnecessary validations. Updated Decks views for CRUD and consistent UX

--- a/app/views/decks/new.erb
+++ b/app/views/decks/new.erb
@@ -10,7 +10,7 @@
                         <label for="name">Deck name</label>
                         <input type="text" class="form-control" id="name" name="name">
                     </div>
-                    <button type="submit" class="btn btn-primary">Next</button>
+                    <button type="submit" class="btn btn-outline-dark btn-lg">Next</button>
                     </form>
             </div>
         </div>
