--- a/app/views/decks/edit.erb
+++ b/app/views/decks/edit.erb
@@ -13,11 +13,12 @@
                     </div>
                     <div class="btn-group" role="group">
                         <button type="submit" class="btn btn-outline-dark btn-lg">Save</button>
-                        </form>
-                        <form method="POST" action="/decks">
+                    </form>
+
+                        <form method="POST" action="/decks/<%= @deck.slug %>">
                             <input type="hidden" name="_method" value="delete" />
                             <button type="submit" class="btn btn-outline-dark btn-lg">Delete</button>
-                            </form>
+                        </form>
                         <a href="/decks/<%= @deck.slug %>"><button type="submit" class="btn btn-lg">Cancel</button></a>
                     </div>
             </div>
