--- a/app/views/cards/show.erb
+++ b/app/views/cards/show.erb
@@ -1,1 +1,30 @@
-<h1>This is the show page for an individual instance of your model.</h1>
+<div class="container min-vh-100" style="padding-top: 40px;">
+    
+        <div class="card mb-3" style="max-width: 85rem;">
+            <div class="card-header text-light text-center display-3"><%= @deck.name %></div>
+            <div class="card-header text-light text-center display-4"><%= @card.name %></div>
+            <div class="card-body">
+            <a href="/decks/<%= @deck.slug %>/cards/new"><button type="button" class="btn btn-dark btn-lg">Create a Card</button></a>
+            <a href="/decks/<%= @deck.slug %>/edit"><button type="button" class="btn btn-dark btn-lg">Edit <%= @deck.name %></button></a>
+            <% if @cards.nil? %>
+                <h4 class="card-title" style="padding-top: 1rem;">Please create a card.</h4>
+            <% else %>
+                <% @cards.each do |card| %>
+                <div class="row" style="padding-top: 1rem;">
+                <div class="col-xl-12">
+                    <div class="card text-light text-center">
+                        <div class="card-header display-4"><%= card.name %></div>
+                    <div class="card-body">
+                        <p class="card-text"><%= card.tags %></p>
+                        <p class="card-text"><%= Note.where(card_id: card.id).last %></p>
+                        <a href="/decks/<%= @deck.slug %>/cards/<%= card.slug %>" class="btn btn-outline-dark btn-lg btn-block">View Card</a>
+                        <a href="/decks/<%= @deck.slug %>/cards/<%= card.slug %>/edit" class="btn btn-outline-dark btn-lg btn-block">Edit Card</a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+                <% end %>
+            <% end %>
+            </div>
+        </div>
+</div>
